Remove unused elements

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
-<html>
+<html lang="en">
 	<head>
 		<title>Chia-Wei Chou's Portfolio</title>
 		<meta charset="utf-8" />
@@ -55,7 +55,7 @@
 										and connected it with the provided graphical user interface. 
 										Several design patterns are utilized to achieve better modularity, extensibility, and testability.</p>
 								</header>
-								<a href="https://github.com/wendychou2023/Bohnanza" class="image main"><img src="images\bohnanza.jpeg" alt="" /></a>
+								<a href="https://github.com/wendychou2023/Bohnanza" class="image main"><img src="images/bohnanza.jpeg" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="https://github.com/wendychou2023/Bohnanza" class="button large">VIEW PROJECT</a></li>
 								</ul>
@@ -67,24 +67,13 @@
 									<header>
 										<h2><a href="https://github.com/wendychou2023/Big-Data-Systems-Akka">Akka Worker System<br />in Java</a></h2>
 									</header>
-									<a href="https://github.com/wendychou2023/Big-Data-Systems-Akka" class="image fit"><img src="images\Akka.png" alt="" /></a>
+									<a href="https://github.com/wendychou2023/Big-Data-Systems-Akka" class="image fit"><img src="images/Akka.png" alt="" /></a>
 									<p>In this project, we implemented the idea of distributed worker system using Akka Framework 
 										in the Worker, Master, DependencyWorker, and DependencyMiner classes to handle high-volume data tasks efficiently.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/wendychou2023/Big-Data-Systems-Akka" class="button">VIEW PROJECT</a></li>
 									</ul>
 								</article>
-								<article>
-									<header>
-										<h2><a href="#">Primis eget<br />
-										imperdiet lorem</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>		
 							</section>
 					</div>
 
@@ -101,12 +90,6 @@
 							</section>				
 						</section>
 					</footer>
-
-				<!-- Copyright -->
-					<div id="copyright">
-						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
-					</div>
-
 			</div>
 
 		<!-- Scripts -->
